--- a/index.html
+++ b/index.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Biblioteca Start</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@800&family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">"
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="cabecalho">
+        <div class="container">
+            <input type="checkbox" id="menu" class="container-botao">
+            <label for="menu">
+                <span class="cabecalho__menu-hamburguer container-imagem"></span>
+            </label>
+            <ul class="lista-menu">
+                <li class="lista-menu-titulo">Categoria</li>
+                <li class="lista-menu-item"><a href="#">Aventura</a></li>
+                <li class="lista-menu-item"><a href="#">Biografia</a></li>
+                <li class="lista-menu-item"><a href="#">Ficção Científica</a></li>
+                <li class="lista-menu-item"><a href="#">Romance</a></li>
+                <li class="lista-menu-item"><a href="#">Vestibular</a></li>
+            </ul>
+
+            <a href="#"><img class="container-imagem" src="img/Logo.svg" alt="Logotipo da biblioteca start"></a>
+            <h1 class="container-titulo">Biblioteca<b class="container-titulo-negrito">Start</b></h1>
+        </div>
+
+        <ul class="opcoes">
+            <input type="checkbox" id="opcoes-menu" class="opcoes-botao">
+            <label for="opcoes-menu">
+                <li class="opcoes-item">Categorias</li>
+            </label>
+
+            <ul class="lista-menu">
+                <li class="lista-menu-item"><a href="#" class="lista-menu-link">Aventura</a></li>
+                <li class="lista-menu-item"><a href="#" class="lista-menu-link">Biografia</a></li>
+                <li class="lista-menu-item"><a href="#" class="lista-menu-link">Ficção Científica</a></li>
+                <li class="lista-menu-item"><a href="#" class="lista-menu-link">Romance</a></li>
+                <li class="lista-menu-item"><a href="#" class="lista-menu-link">Vestibular</a></li>
+            </ul>
+
+            <li class="opcoes-item">
+                <a href="#" class="opcoes-link">Favoritos</a>
+            </li>
+            <li class="opcoes-item">
+                <a href="#" class="opcoes-link">Meus Empréstimos</a>
+            </li>
+
+        </ul>
+
+        <div class="container">
+           <a href="#"><img class="container-imagem container-imagem-transparente" src="img/Favoritos.svg" alt="Favoritos"></a>
+           <a href="#"><img class="container-imagem" src="img/Emprestimos.svg" alt="Empréstimos"></a>
+           <a href="#"><img class="container-imagem" src="img/Usuario.svg" alt="Perfil"></a>
+        </div>
+    </header>
+
+
+    <section class="banner">
+        <h2 class="banner-titulo">Já sabe por onde começar?</h2>
+        <p class="banner-texto">Encontre em nossa estante o que precisa para seu desenvolvimento.</p>
+        <input type="search" class="banner-pesquisa" placeholder="Qual será a nossa próxima leitura">
+    </section>
+
 </body>
 </html>
