--- a/index.html
+++ b/index.html
@@ -55,9 +55,17 @@
         </ul>
 
         <div class="container">
-           <a href="#"><img class="container-imagem container-imagem-transparente" src="img/Favoritos.svg" alt="Favoritos"></a>
-           <a href="#"><img class="container-imagem" src="img/Emprestimos.svg" alt="Empréstimos"></a>
-           <a href="#"><img class="container-imagem" src="img/Usuario.svg" alt="Perfil"></a>
+           <a href="#">
+                <img class="container-imagem container-imagem-transparente" src="img/Favoritos.svg" alt="Favoritos">
+           </a>
+           <a href="#" class="container-link">
+                <img class="container-imagem" src="img/Emprestimos.svg" alt="Meus empréstimos">
+                <p class="container-texto">Meus empréstimos</p>
+           </a>
+           <a href="#" class="container-link">
+                <img class="container-imagem" src="img/Usuario.svg" alt="Meu perfil">
+                <p class="container-texto">Meu Perfil</p>
+           </a>
         </div>
     </header>
 
